--- a/index.html
+++ b/index.html
@@ -1,252 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>🐡 Chromium Fugu API Tracker</title>
-<style>
-* {
-  box-sizing: border-box; /* sensible sizing */
-  vertical-align: top; /* sensible inline-blocks */
-}
-
-body {
-  margin: 0; padding: 0;
-  font-family: Roboto, sans-serif;
-}
-#header {
-  position: absolute;
-  overflow: hidden;
-  left: 0; top: 0; height: 50px; right: 0;
-  padding: 10px;
-  font-size: 20px;
-  font-weight: bold;
-  background-color: #eeeeee;
-}
-#header small {
-  font-size: 15px;
-  font-weight: normal;
-  vertical-align: baseline;
-}
-
-
-/* Overall Display ============================================================ */
-
-#features {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: scroll;
-  white-space: nowrap;
-}
-#details-cols {
-  display: inline-block;
-  position: sticky;
-  background-color: #ffffff;
-  left: 0; top: 0;
-  height: 35px; width: 450px;
-  z-index: 2;
-}
-#details-cols > * { position: absolute; top: 5px; }
-#col-summary { left:  15px; }
-#col-who     { left: 200px; }
-#col-issue   { left: 250px; }
-#col-stars   { left: 310px; }
-#col-where   { left: 360px; }
-
-
-#spacer {
-  display: inline-block; width: 450px; height: 0;
-}
-
-#details-cols, .details {
-    border-right: 5px solid #c0c0c0;
-}
-
-/* Milestones ============================================================ */
-
-.mlabel, .milestone { width: 100px; } /* Must match kPixelsPerMilestone in config.js */
-
-.mlabel {
-  position: sticky;
-  display: inline-block;
-  top: 0;
-  height: 35px;
-  z-index: 1;
-
-  padding-left: 6px;
-  font-size: 20px;
-  font-weight: bold;
-}
-.mlabel small {
-  font-size: 80%;
-  color: firebrick;
-}
-#milestones { position: absolute; left: 0; top: 0; z-index: -1; }
-.milestone {
-  display: inline-block;
-  height: 3999px;
-  background-color: #eeeeff;
-  color: transparent;
-}
-.mlabel:nth-child(even), .milestone:nth-child(even) { background-color: #ffffff; }
-.mlabel:nth-child(odd),  .milestone:nth-child(odd)  { background-color: #f7f7f7; }
-.mlabel.selected:nth-child(even), .milestone.selected:nth-child(even) { background-color: #e0e0f7; }
-.mlabel.selected:nth-child(odd) , .milestone.selected:nth-child(odd)  { background-color: #e7f0fd; }
-
-
-
-/* Partition Separator ============================================================ */
-
-
-.separator {
-  position: sticky;
-  left: 0;
-  top: 35px;
-  height: 30px;
-  z-index: 2;
-
-  padding-left: 10px; padding-top: 6px;
-  color: black;
-  background-color: #c0c0c0;
-}
-
-
-/* Features ============================================================ */
-
-.feature {
-  position: relative;
-  width: 3999px;
-  height: 25px;
-}
-.feature:nth-child(even) {
-  background-color: rgba(255,255,255,0.1);
-}
-.feature:nth-child(odd) {
-  background-color: rgba(128,128,255,0.1);
-}
-/* Opaque colors for the details side, for .name:hover
-   These are the blended colors above, assuming white background.
- */
-.feature:nth-child(even) .details {
-  background-color: rgba(255,255,255,1);
-}
-.feature:nth-child(odd) .details {
-  background-color: rgba(242,242,255,1);
-}
-
-
-
-
-/* Details ============================================================ */
-
-.details {
-  position: sticky;
-  display: inline-block;
-  left: 0;
-  height: 25px;
-  padding: 2px;
-  width: 450px;
-  background-color: inherit;
-  z-index: 1;
-  overflow: hidden;
-}
-.details-inner {
-  position: relative;
-  display: block;
-  background-color: inherit;
-}
-
-.name, .owner, .crbug, .stars, .where {
-  position: absolute;
-  display: block;
-  top: 0;
-  height: 20px;
-  border-radius: 4px;
-  padding: 0 10px;
-  overflow: hidden;
-}
-
-.name {
-  width: 190px;
-  text-overflow: ellipsis;
-}
-
-.name:hover {
-  background-color: inherit;
-  width: auto;
-  z-index: 100;
-}
-
-
-
-.owner {
-  left: 200px;
-  min-width: 20px;
-  width: auto;
-  color: white;
-  background-color: black;
-  text-align: center;
-  padding: 0;
-}
-.owner .abbrev { width: 20px; }
-.owner .full { padding: 0 10px; }
-.owner:hover { z-index: 100; }
-.owner:hover .abbrev { display: none; }
-.owner:not(:hover) .full { display: none; }
-
-.crbug {
-  left: 230px;
-}
-
-.stars {
-  left: 300px;
-}
-.stars .bar {
-  display: inline-block;
-  height: 15px;
-  background-color: #4080FF;
-}
-.stars:hover .bar {
-  background-color: #b22222;
-}
-.where {
-  left: 340px;
-}
-
-/* Timeline Elements ============================================================ */
-
-.ot, .timeline {
-  display: block;
-  position: absolute;
-  top: 0;
-  margin-top: 2px;
-}
-
-.flag,
-.ship {
-  display: inline-block;
-  position: sticky;
-  left: 450px;
-  width: 20px;
-  margin-left: 35px;
-}
-.ot {
-  background-color: #32cd32;
-  left: 0;
-  height: 14px;
-  margin-top: 4px;
-  color: transparent;
-  text-align: center;
-}
-.ot:hover {
-  background-color: #32de32;
-  left: 0;
-  height: 18px;
-  margin-top: 2px;
-  color: black;
-}
-
-</style>
+<link rel=stylesheet href="style.css">
 
 <!-- <span style="font-size: 100vh; opacity: 0.1;">🐡</span> -->
 
@@ -262,306 +17,4 @@ body {
 </div></div>
 
 <script src="config.js"></script>
-<script>
-const $ = document.querySelector.bind(document);
-const $$ = s => [...document.querySelectorAll(s)];
-window.addEventListener('DOMContentLoaded', async e => {
-
-
-  // ============================================================
-  // Fetch and process data
-
-  const data = parseCSV(await (await fetch('issues.csv')).text());
-
-  function parseCSV(csv) {
-    const lines = csv
-      .split('\n')
-      .filter(line => line)
-      .map(line => ',' + line)
-      .map(line => {
-        const matches = [];
-        const re = /,"((?:""|[^"])*?)"/g;
-        let match;
-        while (match = re.exec(line)) matches.push(match[1]);
-        return matches;
-      });
-    const header = lines.shift();
-    return lines.map(line =>
-      Object.fromEntries(line.map((col, index) => [header[index], col]))
-    );
-  }
-
-  // Given a field e.g. "M-80, OS-Android, Pri-1, Proj-Fugu, Target-77, Type-Feature"
-  // extract the value of a label prefix, e.g. for "M" return "80".
-  // Optional suffix can be specified as well (as 3rd argument).
-  function getLabel(prefix, labels, opt_suffix) {
-    prefix = prefix + '-';
-    const suffix = opt_suffix ? '-' + opt_suffix : '';
-
-    labels = labels
-      .split(/,\s*/g)
-      .filter(label => label.startsWith(prefix))
-      .filter(label => label.endsWith(suffix))
-      .map(label => label.substring(prefix.length))
-      .map(label => label.substring(0, label.length - suffix.length))
-      .sort((a, b) => a - b)
-      .reverse();
-    if (!labels.length)
-      return '';
-    return labels[0];
-  }
-
-  let features = data.map(parsed => {
-
-    const labels = parsed['AllLabels'];
-    const row = {
-      id: Number(parsed['ID']),
-      type: parsed['Type'],
-      priority: parsed['Pri'],
-      status: parsed['Status'],
-      os: parsed['OS'],
-      milestone: Number(getLabel('M', labels) || getLabel('Launch-M-Approved', labels, 'Stable')),
-      otMilestone: Number(getLabel('OriginTrial', labels)),
-      otEndMilestone: Number(getLabel('OriginTrialEnd', labels)),
-      targetMilestone: Number(getLabel('Target', labels)),
-      devTrialMilestone: Number(getLabel('DevTrial', labels)),
-      summary: parsed['Summary'],
-      owner: parsed['Owner'],
-      components: parsed['Component'].split(/,\s*/g),
-      stars: parsed['Stars'],
-      labels: labels,
-    };
-
-    // Use Target-X as a fallback if M-X is not present.
-    if (row.targetMilestone && !row.milestone) {
-      row.milestone = row.targetMilestone;
-    }
-
-    if (row.otMilestone && !row.otEndMilestone) {
-      row.otEndMilestone = row.milestone ? (row.milestone - 1) : (row.otMilestone + kDefaultOTDuration - 1);
-    }
-
-    return row;
-  });
-
-  // More processing....
-
-  function assignPartition(row) {
-    if (row.milestone && row.milestone <= kStableMilestone) {
-      return Partitions.shipped;
-    }
-
-    // EXPERIMENTAL: For things that finished w/o dates
-    if (!row.milestone && row.status === 'Fixed') {
-      return Partitions.fixed;
-    }
-
-    if (row.otMilestone && row.otMilestone <= kStableMilestone) {
-      return Partitions.originTrial;
-    }
-
-    if (row.devTrialMilestone && row.devTrialMilestone <= kStableMilestone) {
-      return Partitions.devTrial;
-    }
-
-    if (row.status === 'Started') {
-      return Partitions.started;
-    }
-
-    return Partitions.backlog;
-  }
-
-  // Generic compareFunc for sorting, returning -1/0/1. Works for strings or numbers.
-  function cmp(a, b) {
-    return a < b ? -1 : a > b ? 1 : 0;
-  }
-
-  // Milestone compare - treat "no milestone" as greater than any milestone.
-  function cmpMilestone(a, b) {
-    return cmp(a || 999, b || 999);
-  }
-
-  function compareRows(a, b) {
-    if (a.partition !== b.partition) {
-      return cmp(a.partition, b.partition);
-    }
-
-    if (a.partition === Partitions.shipped) {
-      a.sortMilestone = a.milestone;
-      b.sortMilestone = b.milestone;
-    } else if (a.partition === Partitions.originTrial) {
-      a.sortMilestone = a.otEndMilestone;
-      b.sortMilestone = b.otEndMilestone;
-    } else {
-      a.sortMilestone = a.devTrialMilestone || a.otMilestone || a.milestone;
-      b.sortMilestone = b.devTrialMilestone || b.otMilestone || b.milestone;
-    }
-
-    return cmpMilestone(a.sortMilestone, b.sortMilestone) ||
-           cmp(a.id, b.id);
-  }
-
-  features.forEach(feature => {
-    function owner(s) {
-      if (!s) return s;
-      let org = s.split('@')[1].split('.')[0];
-      if (org === 'chromium') org = 'google';
-      return org.charAt(0).toUpperCase() + org.slice(1);
-    }
-
-    feature.owner = owner(feature.owner);
-
-    feature.partition = assignPartition(feature);
-
-
-    // Symbols for desktop/mobile/pwa/...
-    let where = '';
-    if (/Linux|Chrome|Mac|Windows|All/.test(feature.os)) {
-      where += `<span title="Desktop">${Glyphs.desktop}</span>`;
-    }
-    if (/Android|iOS|All/.test(feature.os)) {
-      where += `<span title="Mobile">${Glyphs.mobile}</span>`;
-    }
-    if (feature.components.some(s => s.startsWith('UI>Browser>WebAppInstalls'))) {
-      where += `<span title="PWA">${Glyphs.pwa}</span>`;
-    }
-    feature.where = where;
-  });
-
-  features = features
-    .filter(row => row.status !== 'WontFix' && row.status !== 'Duplicate')
-    .filter(row => row.type !== 'FLT-Launch')
-    .filter(row => row.partition !== Partitions.fixed); // EXPERIMENTAL: Strip these out
-  features.sort(compareRows);
-
-
-  // ============================================================
-  // Construct display
-
-  // Map milestone to x position / width
-  function mtox(m) {
-    return 450 + (m - kFirstMilestone) * kPixelsPerMilestone;
-  }
-  function mtow(m) {
-    return m * kPixelsPerMilestone;
-  }
-
-  function div(args) {
-    return Object.assign(document.createElement('div'), args);
-  }
-
-  // ============================================================
-  // Milestone labels/background
-
-  let scrollTarget, lastTarget;
-  {
-    const mstoneContainer = div({id: 'milestones'});
-    mstoneContainer.append(div({id: 'spacer'}));
-    for (let m = kFirstMilestone; m < kMaxMilestone; ++m) {
-      const label = div({className: 'mlabel', textContent: m});
-      const column = div({className: 'milestone', textContent: m});
-
-      if (m === kStableMilestone) label.innerHTML += ' <small>(stable)</small>';
-      if (m === kStableMilestone+1) label.innerHTML += ' <small>(beta)</small>';
-      if (m === kStableMilestone+2) label.innerHTML += ' <small>(canary)</small>';
-      if (kStableMilestone <= m && m <= kStableMilestone+2) {
-        label.classList.add('selected');
-        column.classList.add('selected');
-      }
-      if (m === kStableMilestone-5) scrollTarget = label;
-      lastTarget = label;
-
-      $('#features').append(label);
-      mstoneContainer.append(column);
-    }
-    $('#features').append(mstoneContainer);
-  }
-
-
-
-
-  function addSeparator(label, url) {
-    const details = div({className: 'separator', textContent: label});
-    if (url)
-      details.innerHTML += ` (<a target=_blank href="${url}">details</a>)`;
-
-    $('#features').append(details);
-  }
-
-  let curPartition;
-  features.forEach(feature => {
-    if (feature.partition !== curPartition) {
-      curPartition = feature.partition;
-      addSeparator(PartitionDetails[curPartition].label, PartitionDetails[curPartition].url);
-    }
-
-
-    const line = div({className: 'feature'});
-
-    const details = div({className: 'details'});
-    {
-      let html = '';
-      html += `<span class=name>${feature.summary}</span>`;
-      if (feature.owner)
-        html += `<span class=owner title="Issue owner affiliation"><span class=abbrev>${feature.owner[0]}</span><span class=full>${feature.owner}</span></span>`;
-
-      html += `<span class=crbug title="Issue Tracker"><a target=_blank href="https://crbug.com/${feature.id}">${feature.id}</a></span>`;
-      html += `<span class=stars title="${feature.stars} stars"><a target=_blank href="https://crbug.com/${feature.id}"><span class=bar style="width: ${Math.min(feature.stars, kMaxStars)/4}px"></span></a></span>`;
-
-      html += `<span class=where>${feature.where}</span>`;
-      details.innerHTML = `<div class=details-inner>${html}</div>`; // TODO: improve this construction
-    }
-    line.append(details);
-
-    {
-      let html = '';
-      if (feature.otMilestone) {
-        const start = feature.otMilestone;
-        const end   = feature.otEndMilestone + 1;
-        const x1 = mtox(start), x2 = mtox(end);
-        html += `<span class=ot style="left: ${x1}px; width: ${x2-x1}px;">Origin Trial: M${feature.otMilestone} - M${feature.otEndMilestone}</span>`;
-      }
-
-      if (feature.devTrialMilestone) {
-        const start = feature.devTrialMilestone;
-        const end   = feature.otMilestone || feature.milestone || kMaxMilestone;
-        const x1 = mtox(start), x2 = mtox(end);
-        html += `<span class=timeline style="left: ${x1}px; width: ${x2-x1}px;"><span class=flag title="Available behind a flag starting in M${start}">${Glyphs.devTrial}</span></span>`;
-      }
-
-      if (feature.milestone) {
-        const start = feature.milestone;
-        const end   = kMaxMilestone;
-        const x1 = mtox(start), x2 = mtox(end);
-        html += `<span class=timeline style="left: ${x1}px; width: ${x2-x1}px;"><span class=ship title="Exposed by default starting in M${start}">${Glyphs.ship}</span></span>`;
-      }
-
-      line.innerHTML += html;
-    }
-
-    $('#features').append(line);
-
-  });
-
-
-
-  // Scroll all the way to the right, then back to the left.
-  lastTarget.scrollIntoView();
-  scrollTarget.scrollIntoView();
-  $('#header').scrollIntoView();
-
-
-});
-
-/* TODOs
-
- * Years
-
- * Make features children of partition divs, to improve sticky header appearance?
-
- * Make URL in the title bar copy on click
-
-*/
-
-
-</script>
+<script src="dashboard.js"></script>
