Add URL copy button, PWA logo, suppress owners for backlog

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- <span style="font-size: 100vh; opacity: 0.1;">🐡</span> -->
 
 <div id=header>
-  🐡 Chromium Fugu API Tracker <small>https://goo.gle/fugu-api-tracker</small>
+  🐡 Chromium Fugu API Tracker <small>https://goo.gle/fugu-api-tracker</small><button id=copy-url title="Copy"></button>
 </div>
 <div id=features><div id=details-cols>
   <div id=col-summary>Summary</div>
